[package]
name = "darkredis"
version = "0.6.0-dev"
authors = ["Bunogi <haakon.jordet@gmail.com>"]
edition = "2018"
publish = false

description = "Async Redis client using std::future"
license = "Zlib"
readme = "README.md"
keywords = ["redis", "async", "database"]
categories = ["database", "web-programming"]
repository = "https://github.com/Bunogi/darkredis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime_tokio"]
runtime_tokio = ["tokio"]
runtime_agnostic = ["async-std"]
# Compile benchmark-specific functions. You should NOT set this yourself, because
# it re-exports pub(crate) functions as pub, which changes the API. The API exposed
# by this feature will never be considered stable.
bench = []


[dependencies]
async-std = { version = "1.2.0", optional = true }
futures = "0.3.1"
quick-error = "1.2.2"
tokio = { version = "0.2.3", optional = true, features = ["tcp", "io-util", "dns", "macros", "time"] }

[dev-dependencies]
lazy_static = "1.3.0"
num_cpus = "1.10.1"
tokio = { version = "0.2.3", features = ["full"] }
criterion = "0.3.0"

[[bench]]
name = "command"
harness = false

[[bench]]
name = "pipelining"
harness = false
