[package]
name = "darkredis"
version = "0.8.0-dev"
authors = ["Bunogi <haakon.jordet@gmail.com>"]
edition = "2018"
publish = false

description = "Async Redis client using std::future"
license = "Zlib"
readme = "README.md"
keywords = ["redis", "async", "database"]
categories = ["database", "web-programming"]
repository = "https://github.com/Bunogi/darkredis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime_tokio"]
runtime_tokio = ["tokio"]
runtime_async_std = ["async-std"]
# Compile benchmark-specific functions. You should NOT set this yourself, because
# it re-exports pub(crate) functions as pub, which changes the API. The API exposed
# by this feature will never be considered stable.
bench = []

[workspace]
members = ["deadpool-darkredis"]

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"], optional = true }
futures = "0.3.4"
quick-error = "1.2.3"
tokio = { version = "0.2.13", optional = true, features = ["tcp", "io-util", "dns", "macros", "time"] }

[dev-dependencies]
num_cpus = "1.12.0"
criterion = "0.3.1"

[[bench]]
name = "command"
harness = false

[[bench]]
name = "pipelining"
harness = false
